bug fix color div height on mobile

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ header h1 {
   color: rgb(212, 212, 212);
 }
 .color {
-  min-height: 100%;
   display: flex;
   flex: 1;
   flex-direction: column;
